Add check of bibtex fields and entry types

--- a/rework_bib.ipynb
+++ b/rework_bib.ipynb
@@ -2,44 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "48eee3c6",
+   "execution_count": 34,
+   "id": "6761d11d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
+    "BIBTEX_FIELDS = [\n",
+    "    \"address\", \"annote\", \"author\", \"booktitle\", \"chapter\", \"crossref\", \"edition\",\n",
+    "    \"editor\", \"howpublished\", \"institution\", \"journal\", \"key\", \"month\", \"note\",\n",
+    "    \"number\", \"organization\", \"pages\", \"publisher\", \"school\", \"series\", \"title\",\n",
+    "    \"type\", \"volume\", \"year\", \"abstract\", \"doi\", \"file\", \"isbn\", \"issn\", \"keywords\",\n",
+    "    \"language\", \"location\", \"url\", \"version\", \"eprint\", \"archivePrefix\", \"primaryClass\",\n",
+    "    \"bibsource\",\n",
+    "]\n",
+    "\n",
+    "BIBTEX_ENTRY_TYPES = [\n",
+    "    \"article\", \"book\", \"booklet\", \"conference\", \"inbook\", \"incollection\",\n",
+    "    \"inproceedings\", \"manual\", \"mastersthesis\", \"misc\", \"phdthesis\",\n",
+    "    \"proceedings\", \"techreport\", \"unpublished\",\n",
+    "]\n",
+    "\n",
+    "def entry_start(line):\n",
+    "    for entry_type in BIBTEX_ENTRY_TYPES:\n",
+    "        entry_str = \"@\" + entry_type + \"{\"\n",
+    "        if entry_str in line:\n",
+    "            return entry_type\n",
+    "    return None\n",
+    "\n",
+    "def is_field(line: str):\n",
+    "    \"\"\"\n",
+    "    Check if the input line starts with any given BibTeX field, allowing for leading spaces or tabs,\n",
+    "    and any spaces/tabs around the equals sign.\n",
+    "\n",
+    "    Example match:\n",
+    "        '    author= {John Doe},'\n",
+    "        '\\tjournal  =\"Some Journal\"'\n",
+    "\n",
+    "    Returns the field name if it matches, None otherwise.\n",
+    "    \"\"\"\n",
+    "    for field_name in BIBTEX_FIELDS:\n",
+    "        match = re.match(rf\"{re.escape(field_name)}\\s*=\\s*\", line.strip())\n",
+    "        if match:\n",
+    "            return field_name\n",
+    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "48eee3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_bib_file(input_file):\n",
     "    with open(input_file, 'r', encoding='utf-8') as f:\n",
     "        lines = f.readlines()\n",
     "\n",
     "    for i,line in enumerate(lines):\n",
-    "        if \"title\" in line:\n",
+    "\n",
+    "        if is_field(line) == \"title\":\n",
     "            line, count = re.subn(r'\\{([A-Za-z])\\}', r'\\1', line)\n",
     "            line, count = re.subn('\"{', '{', line)\n",
     "            line, count = re.subn('}\"', '}', line)\n",
-    "\n",
     "            # Protect capital letters in titles\n",
     "            line = re.sub(r'(?<!\\{)(\\b[A-Z]{1,}\\b)(?!\\})',r'{\\1}',line)\n",
-    "\n",
     "            lines[i] = line\n",
     "\n",
-    "\n",
-    "        if \"= \\\"\" in line and \"\\\",\\n\" in line:\n",
+    "        # Wrap field content using brackets\n",
+    "        if is_field(line) is not None and \"\\\",\\n\" in line:\n",
     "            line = line.replace('= \"', '= {')\n",
     "            line = line.replace('\",\\n', '},\\n')\n",
-    "\n",
-    "        if \"=\" in line:\n",
-    "            line = \"\\t\"+line.strip() + \"\\n\"\n",
     "            lines[i] = line\n",
     "\n",
-    "        if \"author\" in line:\n",
+    "        # Remove double spacing and tabs\n",
+    "        line, count = re.subn('\\s+', ' ', line)\n",
+    "        line, count = re.subn('\\t+', ' ', line)\n",
+    "        line = \"\\t\"+line.strip() + \"\\n\"\n",
+    "        lines[i] = line\n",
+    "\n",
+    "        # Remove empty lines\n",
+    "        if len(line.strip()) == 0:\n",
+    "            lines[i] = line.strip()\n",
+    "\n",
+    "        # Add empty line between entries\n",
+    "        if entry_start(line) is not None:\n",
+    "            lines[i] = \"\\n\" + line.strip() + \"\\n\"\n",
+    "\n",
+    "        # Remove spaces or tabs on entry end wrap\n",
+    "        if line == \"\\t}\\n\":\n",
+    "            lines[i] = \"}\\n\"\n",
+    "\n",
+    "        # Restring maximum number of authors\n",
+    "        if is_field(line) == \"author\":\n",
     "            authors = line.strip()[len(\"author\"):].strip()[1:].strip()[1:-2].split(\" and \")\n",
-    "            if len(authors) > 3:\n",
-    "                authors = authors[0] + \" and et.al.\"\n",
+    "            if len(authors) > 10:\n",
+    "                authors = authors[0] + \" and et al.\"\n",
     "            else:\n",
     "                authors = \" and \".join(authors)\n",
     "            line = \"\\tauthor = {\" + authors + \"},\\n\"\n",
+    "            line, _ = re.subn('and others', 'and et al.', line)\n",
     "            lines[i] = line\n",
     "\n",
     "    with open(\"references_reworked.bib\", 'w', encoding='utf-8') as f:\n",
@@ -47,14 +111,6 @@
     "\n",
     "process_bib_file(\"references.bib\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "233203c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
